--- a/OddWord.cabal
+++ b/OddWord.cabal
@@ -35,3 +35,7 @@ Test-Suite oddword-tests
         base       >= 4   && < 5,
         QuickCheck >= 2.4 && < 2.5,
         OddWord    >= 1.0 && < 1.1
+
+Source-repository head
+    type:     darcs
+    location: https://patch-tag.com/r/komadori/OddWord
