--- a/OddWord.cabal
+++ b/OddWord.cabal
@@ -21,7 +21,7 @@ Library
     hs-source-dirs:   src
     exposed-modules:  Data.Word.Odd
     default-language: Haskell2010
-    other-extensions: ScopedTypeVariables
+    other-extensions: ScopedTypeVariables CPP
     build-depends:
         base >= 4.5 && < 5
 
@@ -30,7 +30,7 @@ Test-Suite oddword-tests
     hs-source-dirs:   test
     main-is:          Main.hs
     default-language: Haskell2010
-    other-extensions: ScopedTypeVariables
+    other-extensions: ScopedTypeVariables CPP
     build-depends:
         base       >= 4.5 && < 5,
         QuickCheck >= 2.4 && < 2.9,
