--- a/OddWord.cabal
+++ b/OddWord.cabal
@@ -17,6 +17,10 @@ description:
     exposes a subset of its bits as a new narrower word type. Includes
     predefined type synonyms for all the odd sized words up to 63 bits.
 
+Flag TypeLitsSupport
+    description: Enable support for GHC type-level naturals.
+    default: True
+
 Library
     hs-source-dirs:   src
     exposed-modules:  Data.Word.Odd
@@ -24,6 +28,10 @@ Library
     other-extensions: ScopedTypeVariables CPP
     build-depends:
         base >= 4.5 && < 5
+    if flag(TypeLitsSupport) && impl(ghc >= 7.8)
+        cpp-options: -DTYPE_LITS
+        other-modules: Data.Word.Odd.TypeLits
+        other-extensions: DataKinds KindSignatures
 
 Test-Suite oddword-tests
     type:             exitcode-stdio-1.0
@@ -35,6 +43,20 @@ Test-Suite oddword-tests
         base       >= 4.5 && < 5,
         QuickCheck >= 2.4 && < 2.9,
         OddWord    >= 1.0 && < 1.1
+
+Test-Suite oddword-tests-typelits
+    type:             exitcode-stdio-1.0
+    hs-source-dirs:   test
+    main-is:          TypeLitsTest.hs
+    default-language: Haskell2010
+    other-extensions: DataKinds
+    build-depends:
+        base       >= 4.7 && < 5,
+        OddWord    >= 1.0 && < 1.1
+    if flag(TypeLitsSupport) && impl(ghc >= 7.8)
+        buildable: True
+    else
+        buildable: False
 
 Source-repository head
     type:     darcs
