--- a/OddWord.cabal
+++ b/OddWord.cabal
@@ -10,7 +10,7 @@ category:           Data
 stability:          Stable
 cabal-version:      >= 1.10
 build-type:         Simple
-extra-source-files: test/*.hs NEWS
+extra-source-files: test/*.hs bench/*.hs NEWS
 homepage:           http://www.gekkou.co.uk/
 description:
     Provdes the 'OddWord' type, which wraps an existing integer type and
@@ -55,6 +55,16 @@ Test-Suite oddword-tests-typelits
             OddWord
     else
         buildable: False
+
+Benchmark oddword-bench
+    type:             exitcode-stdio-1.0
+    hs-source-dirs:   bench
+    main-is:          Main.hs
+    default-language: Haskell2010
+    build-depends:
+        base       >= 4.5 && < 5,
+        criterion  >= 1.4 && < 1.5,
+        OddWord
 
 Source-repository head
     type:     darcs
