--- a/OddWord.cabal
+++ b/OddWord.cabal
@@ -17,52 +17,39 @@ description:
     exposes a subset of its bits as a new narrower word type. Includes
     predefined type synonyms for all the odd sized words up to 63 bits.
 
-Flag TypeLitsSupport
-    description: Enable support for GHC type-level naturals.
-    default: True
-
 Library
     hs-source-dirs:   src
     exposed-modules:  Data.Word.Odd
     default-language: Haskell2010
-    other-extensions: ScopedTypeVariables CPP
+    other-extensions:
+        ScopedTypeVariables CPP
+        DeriveDataTypeable DataKinds KindSignatures
     build-depends:
-        base >= 4.5 && < 5
-    if flag(TypeLitsSupport) && impl(ghc >= 7.8)
-        cpp-options: -DTYPE_LITS
-        other-modules: Data.Word.Odd.TypeLits
+        base >= 4.7 && < 5
 
 Test-Suite oddword-tests
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test
     main-is:          Main.hs
     default-language: Haskell2010
-    other-extensions: ScopedTypeVariables CPP
+    other-extensions:
+        ScopedTypeVariables CPP
+        DeriveDataTypeable DataKinds KindSignatures
     build-depends:
-        base       >= 4.5 && < 5,
+        base       >= 4.7 && < 5,
         QuickCheck >= 2.4 && < 2.12,
         OddWord
-
-Test-Suite oddword-tests-typelits
-    type:             exitcode-stdio-1.0
-    hs-source-dirs:   test
-    main-is:          TypeLitsTest.hs
-    default-language: Haskell2010
-    if flag(TypeLitsSupport) && impl(ghc >= 7.8)
-        buildable: True
-        build-depends:
-            base       >= 4.5 && < 5,
-            OddWord
-    else
-        buildable: False
 
 Benchmark oddword-bench
     type:             exitcode-stdio-1.0
     hs-source-dirs:   bench
     main-is:          Main.hs
     default-language: Haskell2010
+    other-extensions:
+        ScopedTypeVariables CPP
+        DeriveDataTypeable DataKinds KindSignatures
     build-depends:
-        base       >= 4.5 && < 5,
+        base       >= 4.7 && < 5,
         criterion  >= 1.4 && < 1.5,
         OddWord
 
