--- a/OddWord.cabal
+++ b/OddWord.cabal
@@ -24,6 +24,7 @@ Library
     other-extensions:
         ScopedTypeVariables CPP
         DeriveDataTypeable DataKinds KindSignatures
+        TypeFamilies TypeOperators UndecidableInstances
     build-depends:
         base >= 4.7 && < 5
 
@@ -47,7 +48,7 @@ Benchmark oddword-bench
     main-is:          Main.hs
     default-language: Haskell2010
     other-extensions:
-        ScopedTypeVariables
+        ScopedTypeVariables DataKinds
     build-depends:
         base       >= 4.7 && < 5,
         criterion  >= 1.4 && < 1.5,
