Fix ZNat in GHC pre-8.4 by providing a version that doesn't use Div and Mod.

--- a/OddWord.cabal
+++ b/OddWord.cabal
@@ -22,7 +22,7 @@ Library
     exposed-modules:  Data.Word.Odd
     default-language: Haskell2010
     other-extensions:
-        ScopedTypeVariables
+        ScopedTypeVariables CPP
         DeriveDataTypeable DataKinds KindSignatures
         TypeFamilies TypeOperators UndecidableInstances
     build-depends:
