--- a/OddWord.cabal
+++ b/OddWord.cabal
@@ -35,7 +35,7 @@ Test-Suite oddword-tests
     default-language: Haskell2010
     other-modules: Equiv Props
     other-extensions:
-        ScopedTypeVariables DataKinds
+        ScopedTypeVariables DataKinds KindSignatures
     build-depends:
         base       >= 4.8 && < 5,
         hspec      >= 2.5 && < 2.6,
